# rex-cyber

./: .gitignore  README.md  pyproject.toml
.github/workflows/: workflow.yml
cpp/: Makefile
cpp/include/: hmac_auth.hpp  iot_packet.hpp
cpp/src/: c_api.cpp  gateway_security.cpp
rex/: __init__.py  cli.py  config.py  engine.py
rex/adapters/: __init__.py  base.py  file_storage.py  mqtt.py
rex/core/: __init__.py  gateway.py
rex/crypto/: __init__.py  aes.py  keys.py  rotation.py
rex/dashboard/: __init__.py  report.py  soc.py
rex/monitor/: __init__.py  alert.py  anomaly.py  rate_limiter.py  validator.py
rex/nids/: __init__.py  default_rules.py  engine.py  rule.py
